# g4bnb_ana

./: CMakeLists.txt  README.md  input.txt  main.cpp  setup_g41061_detached.sh
include/: .HistGroup.h.swp  Dk2nuAnalyzer.h  FileManager.h  HistGroup.h  HistogramConfig.h  HistogramManager.h  TimeBinning.h
src/: Dk2nuAnalyzer.cpp  FileManager.cpp  HistogramManager.cpp
